--- a/trellis/group_vars/staging/wordpress_sites.yml
+++ b/trellis/group_vars/staging/wordpress_sites.yml
@@ -3,13 +3,13 @@
 # Define accompanying passwords/secrets in group_vars/staging/vault.yml
 
 wordpress_sites:
-  madebydiesel.com:
+  138.68.31.191:
     site_hosts:
-      - canonical: staging.madebydiesel.com
+      - canonical: 138.68.31.191
         # redirects:
         #   - otherdomain.com
     local_path: ../site # path targeting local Bedrock site directory (relative to Ansible root)
-    repo: git@github.com:MadeByDiesel/MBD-Blog.git # replace with your Git repo URL
+    repo: git@github.com:MadeByDiesel/madebydiesel.com.git # replace with your Git repo URL
     repo_subtree_path: site # relative path to your Bedrock/WP directory in your repo
     branch: master
     multisite:
