--- a/trellis/group_vars/production/wordpress_sites.yml
+++ b/trellis/group_vars/production/wordpress_sites.yml
@@ -3,11 +3,11 @@
 # Define accompanying passwords/secrets in group_vars/production/vault.yml
 
 wordpress_sites:
-  madebydiesel.com:
+  138.197.199.192:
     site_hosts:
-      - canonical: example.com
+      - canonical: 138.197.199.192
         redirects:
-          - www.example.com
+          - 138.197.199.192
     local_path: ../site # path targeting local Bedrock site directory (relative to Ansible root)
     repo: git@github.com:MadeByDiesel/madebydiesel.com.git # replace with your Git repo URL
     repo_subtree_path: site # relative path to your Bedrock/WP directory in your repo
