--- a/trellis/group_vars/staging/wordpress_sites.yml
+++ b/trellis/group_vars/staging/wordpress_sites.yml
@@ -5,7 +5,7 @@
 wordpress_sites:
   138.197.199.192:
     site_hosts:
-      - canonical: madebydiesel.com 
+      - canonical: 138.197.199.192
         # redirects:
         #   - otherdomain.com
     local_path: ../site # path targeting local Bedrock site directory (relative to Ansible root)
